--- a/index.html
+++ b/index.html
@@ -8,45 +8,38 @@
   <title>Net Ninja Pro - the Book</title>
 </head>
 <body>
-  <!-- heading tags -->
-  <h1>Bootstrap 5 Tutorial</h1>
-  <h2>this is an h2</h2>
-  <h3>this is an h3</h3>
-  <h2 class="h3">this is an h2 with an h3 class</h2>
+  <!-- basic buttons -->
+  <h2>Buttons</h2>
 
-  <!-- display headings -->
-  <h1 class="display-1">display 1 heading</h1>
-  <h2 class="display-2">display 2 heading</h2>
-  <h6 class="display-6">display 6 heading</h6>
-  <p class="display-1">p tag with display-1 class</p>
+  <button class="btn btn-primary">primary button</button>
+  <button class="btn btn-secondary">secondary button</button>
 
-  <!-- lead text & alignment -->
-  <small>this is small text</small>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-  <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-  <p class="lead text-center">hello ninjas</p>
-  <p class="lead text-end">hello ninjas</p>
-  <p class="lead">hello ninjas</p>
+  <!-- anchor tags as buttons -->
+  <h2>Links as buttons</h2>
 
-  <!-- text decoration & font weight -->
-  <p class="text-decoration-underline">this is underlined text</p>
-  <p class="text-decoration-line-through">this is line through text</p>
-  <p class="fw-bold">this is bold text</p>
-  <small>this is small text</small>
+  <a href="#" class="btn btn-info">info anchor tag</a>
+  <a href="#" class="btn btn-success">success anchor</a>
 
-  <!-- text colors -->
-  <p class="text-primary">theme primary color</p>
-  <p class="text-secondary">theme secondary color</p>
-  <p class="text-info">theme info color</p>
-  <p class="text-warning">theme warning color</p>
-  <p class="text-success">theme warning color</p>
-  <p class="text-danger">theme danger color</p>
-  <p class="text-muted">theme danger color</p>
+  <!-- button sizes -->
+  <h2>Button sizes</h2>
 
-  <!-- background colors -->
-  <p class="text-white bg-primary">white text on primary bg</p>
-  <p class="text-white bg-secondary">white text on secondary bg</p>
-  <p class="text-light bg-danger">white text on danger bg</p>
+  <button class="btn btn-lg btn-danger">large danger button</button>
+  <button class="btn btn-sm btn-warning">small warning button</button>
+
+  <!-- outlined styles -->
+  <h2>Button styles</h2>
+
+  <button class="btn btn-outline-primary">outlined primary button</button>
+  <button class="btn btn-outline-secondary btn-lg">large outlined secondary button</button>
+
+  <!-- button groups -->
+  <h2>Button groups</h2>
+
+  <div class="btn-group">
+    <a href="#" class="btn btn-primary">button 1</a>
+    <a href="#" class="btn btn-warning">button 2</a>
+    <a href="#" class="btn btn-success">button 3</a>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
