--- a/index.html
+++ b/index.html
@@ -8,38 +8,31 @@
   <title>Net Ninja Pro - the Book</title>
 </head>
 <body>
-  <!-- basic buttons -->
-  <h2>Buttons</h2>
+  <!-- margin and padding -->
+  <div class="bg-primary m-1 p-1">small margin and padding</div>
+  <div class="bg-primary m-5 p-5">large margin and padding</div>
+  <div class="bg-primary my-3 px-5">margin in y direction, padding in x direction</div>
+  <div class="bg-primary mt-3 mb-4 ms-5 me-1 ps-5 pt-4 pe-2 pb-1">m & p for each direction</div>
 
-  <button class="btn btn-primary">primary button</button>
-  <button class="btn btn-secondary">secondary button</button>
+  <!-- borders -->
+  <div class="m-3 p-3 border">default border</div>
+  <div class="m-3 p-3 border-top border-end">individual borders</div>
+  <div class="m-3 p-3 border-start border-success">border success color at start</div>
+  <div class="m-3 p-3 border-start border-danger border-5">thicker border</div>
+  <div class="m-3 p-3 rounded border border-5">rounded corners</div>
+  <div class="m-3 p-3 rounded-pill border border-5">rounded pill borders</div>
 
-  <!-- anchor tags as buttons -->
-  <h2>Links as buttons</h2>
+  <!-- box shadow -->
+  <div class="m-3 p-3 shadow-sm">element with small box shadow</div>
+  <div class="m-3 p-3 shadow-lg">element with large box shadow</div>
 
-  <a href="#" class="btn btn-info">info anchor tag</a>
-  <a href="#" class="btn btn-success">success anchor</a>
-
-  <!-- button sizes -->
-  <h2>Button sizes</h2>
-
-  <button class="btn btn-lg btn-danger">large danger button</button>
-  <button class="btn btn-sm btn-warning">small warning button</button>
-
-  <!-- outlined styles -->
-  <h2>Button styles</h2>
-
-  <button class="btn btn-outline-primary">outlined primary button</button>
-  <button class="btn btn-outline-secondary btn-lg">large outlined secondary button</button>
-
-  <!-- button groups -->
-  <h2>Button groups</h2>
-
-  <div class="btn-group">
-    <a href="#" class="btn btn-primary">button 1</a>
-    <a href="#" class="btn btn-warning">button 2</a>
-    <a href="#" class="btn btn-success">button 3</a>
-  </div>
+  <!-- font weight -->
+  <p class="fw-bold">bold text</p>
+  <p class="fw-bolder">bolder text</p>
+  <p>normal text</p>
+  <p class="fw-light">light text</p>
+  <p class="fst-italic">italic text</p>
+  <p class="fst-italic fw-light">italic light text</p>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
