--- a/index.html
+++ b/index.html
@@ -8,31 +8,26 @@
   <title>Net Ninja Pro - the Book</title>
 </head>
 <body>
-  <!-- margin and padding -->
-  <div class="bg-primary m-1 p-1">small margin and padding</div>
-  <div class="bg-primary m-5 p-5">large margin and padding</div>
-  <div class="bg-primary my-3 px-5">margin in y direction, padding in x direction</div>
-  <div class="bg-primary mt-3 mb-4 ms-5 me-1 ps-5 pt-4 pe-2 pb-1">m & p for each direction</div>
+  <div class="container m-5">
+    <h2>normal container</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas sequi, odio temporibus dignissimos saepe maxime totam? Suscipit illo temporibus, et perspiciatis est facere nesciunt veritatis consequuntur veniam? Voluptatibus, fuga molestiae.</p>
+  </div>
 
-  <!-- borders -->
-  <div class="m-3 p-3 border">default border</div>
-  <div class="m-3 p-3 border-top border-end">individual borders</div>
-  <div class="m-3 p-3 border-start border-success">border success color at start</div>
-  <div class="m-3 p-3 border-start border-danger border-5">thicker border</div>
-  <div class="m-3 p-3 rounded border border-5">rounded corners</div>
-  <div class="m-3 p-3 rounded-pill border border-5">rounded pill borders</div>
+  <div class="container-fluid">
+    <h2>fluid container</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum eius sit quasi temporibus officiis delectus obcaecati aliquam, optio deserunt voluptas distinctio dolor repellat tempora quidem id unde aliquid corrupti adipisci?</p>
+  </div>
 
-  <!-- box shadow -->
-  <div class="m-3 p-3 shadow-sm">element with small box shadow</div>
-  <div class="m-3 p-3 shadow-lg">element with large box shadow</div>
+  <div class="container-lg my-5">
+    <h2>100% width until lg screen, then container</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa omnis, voluptatibus praesentium numquam, non deserunt magnam qui nesciunt est sint ab? Aperiam nostrum alias reiciendis. Delectus consequuntur minima magnam voluptatem?</p>
+  </div>
 
-  <!-- font weight -->
-  <p class="fw-bold">bold text</p>
-  <p class="fw-bolder">bolder text</p>
-  <p>normal text</p>
-  <p class="fw-light">light text</p>
-  <p class="fst-italic">italic text</p>
-  <p class="fst-italic fw-light">italic light text</p>
+  <div class="container-xl my-5">
+    <h2>100% width until extra large screen, then container</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore expedita quod iure aspernatur? Animi ullam pariatur illum optio? Quia iure iste perspiciatis impedit fuga repellat animi tempora ad vel et.</p>
+  </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
