--- a/index.html
+++ b/index.html
@@ -6,73 +6,43 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <title>Net Ninja Pro - the Book</title>
+  <style>
+    section{
+      padding: 60px 0;
+    }
+  </style>
 </head>
 <body>
   
-  <div class="container-lg my-5">
-    <h2>basic grid</h2>
-    <div class="row">
-      <div class="col">
-        <div class="p-5 bg-primary text-light">col 1</div>
-      </div>
-      <div class="col">
-        <div class="p-5 bg-primary text-light">col 2</div>
-      </div>
-      <div class="col">
-        <div class="p-5 bg-primary text-light">col 3</div>
-      </div>
-      <div class="col">
-        <div class="p-5 bg-primary text-light">col 4</div>
+  <!-- navbar -->
+
+
+  <!-- main image and intro text -->
+  <section id="intro">
+    <div class="container-lg">
+      <div class="row justify-content-center align-items-center">
+        <div class="col-md-5 text-center text-md-start">
+          <h1>
+            <div class="display-2">Black Belt</div>
+            <div class="display-5 text-muted">Your Coding Skills</div>
+          </h1>
+          <p class="lead my-4 text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+        </div>
+        <div class="col-md-5 text-center d-none d-md-block">
+          <img class="img-fluid" src="/assets/ebook-cover.png" alt="ebook-cover">
+        </div>
       </div>
     </div>
-  </div>
+  </section>
+
+  <!-- pricing plans -->
 
 
-  <div class="container-lg my-5">
-    <h2>column widths</h2>
-    <div class="row">
-      <div class="col-6">
-        <div class="p-5 bg-primary text-light">col 1</div>
-      </div>
-      <div class="col-3">
-        <div class="p-5 bg-primary text-light">col 2</div>
-      </div>
-      <div class="col-3">
-        <div class="p-5 bg-primary text-light">col 3</div>
-      </div>
-    </div>
-  </div>
+  <!-- topics at a glance -->
 
 
-  <div class="container-lg my-5">
-    <h2>responsive column widths</h2>
-    <div class="row">
-      <div class="col-sm-4 col-lg-6">
-        <div class="p-5 bg-primary text-light">col 1</div>
-      </div>
-      <div class="col-sm-4 col-lg-3">
-        <div class="p-5 bg-primary text-light">col 2</div>
-      </div>
-      <div class="col-sm-4 col-lg-3">
-        <div class="p-5 bg-primary text-light">col 3</div>
-      </div>
-    </div>
-  </div>
-
-  <div class="container-lg my-5">
-    <h2>justifying columns</h2>
-    <div class="row justify-content-center">
-      <div class="col-md-3">
-        <div class="p-5 bg-primary text-light">col 1</div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-5 bg-primary text-light">col 2</div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-5 bg-primary text-light">col 3</div>
-      </div>
-    </div>
-  </div>
+  <!-- reviews list -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
