--- a/index.html
+++ b/index.html
@@ -120,11 +120,106 @@
     </div>
   </section>
 
-
   <!-- topics at a glance -->
+  <section id="topics">
+    <div class="container-md">
+      <div class="text-center">
+        <h2>Inside the Book...</h2>
+        <p class="lead text-muted">A quick glance at the topics you'll learn</p>
+      </div>
 
+      <div class="row my-5 g-5 justify-content-around align-items-center">
+        <div class="col-6 col-lg-4">
+          <img src="/assets/kindle.png" class="img-fluid" alt="ebook">
+        </div>
+
+        <div class="col-lg-6">
+        <!-- accordion -->
+        <div class="accordion" id="chapters">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading 1">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-1" aria-expanded="true" aria-controls="chapter-1">
+                Chapter 1 - Your First Web Page
+              </button>
+            </h2>
+            <div id="chapter-1" class="accordion-collapse collapse show" aria-labeledby="heading-1" data-bs-parent="#chapters">
+              <div class="accordion-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, animi in? Corrupti hic quos sapiente vel quaerat autem inventore eaque culpa temporibus, tempore consequatur harum sit unde repellendus? Fuga, vel?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente sequi quia obcaecati reiciendis recusandae quidem magni eum aliquam assumenda? Beatae labore itaque repellat nam saepe voluptatum et, quibusdam adipisci commodi.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading 2">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-2" aria-expanded="true" aria-controls="chapter-2">
+                Chapter 2 - Mastering CSS
+              </button>
+            </h2>
+            <div id="chapter-2" class="accordion-collapse collapse" aria-labeledby="heading-2" data-bs-parent="#chapters">
+              <div class="accordion-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, vitae qui adipisci, doloremque nesciunt quo possimus, sapiente delectus modi voluptatum consequuntur culpa aperiam illum quam alias autem repudiandae sint at.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit optio minima necessitatibus. Officiis voluptates rem officia iusto cum numquam, laudantium accusamus hic ipsum delectus sit architecto quidem itaque eligendi exercitationem?</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading 3">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-3" aria-expanded="true" aria-controls="chapter-3">
+                Chapter 3 - The Power of JavaScript
+              </button>
+            </h2>
+            <div id="chapter-3" class="accordion-collapse collapse" aria-labeledby="heading-3" data-bs-parent="#chapters">
+              <div class="accordion-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt et quae error, doloribus quis soluta quia perferendis doloremque minus reprehenderit voluptatibus officia sint recusandae quaerat aperiam optio id excepturi quibusdam.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi quisquam dolor dolores in quia ipsam repellat sunt vitae consequatur veniam aliquid, ipsum quam eaque? Quibusdam reprehenderit animi maiores aliquam.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading 4">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-4" aria-expanded="true" aria-controls="chapter-4">
+                Chapter 4 - Storing Data (Firebase Databases)
+              </button>
+            </h2>
+            <div id="chapter-4" class="accordion-collapse collapse" aria-labeledby="heading-4" data-bs-parent="#chapters">
+              <div class="accordion-body">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia maiores eligendi quis dolorum praesentium rerum accusantium ab quasi, ut voluptates nesciunt a accusamus, ex non eaque dignissimos architecto illum corporis?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate a ad soluta labore, deleniti dicta molestias et vero distinctio suscipit at ducimus rerum. Numquam, optio. Optio doloribus similique et esse?</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading 5">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#chapter-5" aria-expanded="true" aria-controls="chapter-5">
+                Chapter 5 - User Authentication
+              </button>
+            </h2>
+            <div id="chapter-5" class="accordion-collapse collapse" aria-labeledby="heading-5" data-bs-parent="#chapters">
+              <div class="accordion-body">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis, porro aliquid quibusdam necessitatibus dolor, deserunt inventore facere cumque modi vero corrupti unde repudiandae dolores? Omnis quaerat qui eos minima eum!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum vel quas magni repudiandae enim aliquam consequatur? Eum vero incidunt amet veritatis aperiam, porro nemo officiis harum beatae rerum, dolore non?</p>
+              </div>
+            </div>
+          </div>
+        
+        </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- reviews list -->
+
+
+  <!-- contact form -->
+
+
+  <!-- get updates / modal trigger -->
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
