--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
   <title>Net Ninja Pro - the Book</title>
   <style>
@@ -19,6 +20,7 @@
     <div class="container-xxl">
       <a href="#intro" class="navbar-brand">
         <span class="fw-bold text-secondary">
+          <i class="bi bi-book-half"></i>
           Net Ninja Pro - The Book
         </span>
       </a>
@@ -216,14 +218,21 @@
   <section id="reviews" class="bg-light">
     <div class="container-lg">
       <div class="text-center">
-        <h2>Book Reviews</h2>
+        <h2><i class="bi bi-stars"></i>Book Reviews</h2>
         <p class="lead">What my students have said about the book...</p>
       </div>
 
-      <div class="row justify-content-center">
+      <div class="row justify-content-center my-5">
         <div class="col-lg-8">
           <div class="list-group">
             <div class="list-group-item py-3">
+              <div class="pb-2">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
               <small>Review by Mario</small>
@@ -234,6 +243,13 @@
         <div class="col-lg-8">
           <div class="list-group">
             <div class="list-group-item py-3">
+              <div class="pb-2">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
               <small>Review by Mario</small>
@@ -244,6 +260,13 @@
         <div class="col-lg-8">
           <div class="list-group">
             <div class="list-group-item py-3">
+              <div class="pb-2">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
               <small>Review by Mario</small>
@@ -254,6 +277,13 @@
         <div class="col-lg-8">
           <div class="list-group">
             <div class="list-group-item py-3">
+              <div class="pb-2">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
               <small>Review by Mario</small>
@@ -264,13 +294,20 @@
         <div class="col-lg-8">
           <div class="list-group">
             <div class="list-group-item py-3">
+              <div class="pb-2">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-half"></i>
+              </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
               <small>Review by Mario</small>
             </div>
           </div>
         </div>
-        
+
       </div>
     </div>
   </section>
