--- a/index.html
+++ b/index.html
@@ -440,6 +440,18 @@
     </div>
     <div class="offcanvas-body">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum aut eaque vel quo laudantium at corporis? Voluptatum necessitatibus dolores doloribus quisquam facilis similique recusandae nihil beatae, magni error labore voluptates?</p>
+      <!-- dropdown -->
+      <div class="dropdown mt-3">
+        <button class="btn btn-secondary dropdown-toggle" id="book-dropdown" type="button" data-bs-toggle="dropdown">
+          Choose a book title
+        </button>
+        <ul class="dropdown-menu" aria-labeledby="book-dropdown">
+          <li><a href="#" class="dropdown-item">Become a React Superhero</a></li>
+          <li><a href="#" class="dropdown-item">Conquering Vue.js</a></li>
+          <li><a href="#" class="dropdown-item">Leveling up your Next.js</a></li>
+        </ul>
+      </div>
+
     </div>
   </div>
 
