--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="/sass/main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
   <title>Net Ninja Pro - the Book</title>
@@ -222,10 +222,10 @@
   </section>
 
   <!-- reviews list -->
-  <section id="reviews" class="bg-light">
+  <section id="reviews" class="bg-altlight">
     <div class="container-lg">
       <div class="text-center">
-        <h2><i class="bi bi-stars"></i>Book Reviews</h2>
+        <h2><i class="bi bi-stars text-altdark"></i>Book Reviews</h2>
         <p class="lead">What my students have said about the book...</p>
       </div>
 
@@ -234,11 +234,11 @@
           <div class="list-group">
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
               </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
@@ -251,11 +251,11 @@
           <div class="list-group">
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
               </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
@@ -268,11 +268,11 @@
           <div class="list-group">
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
               </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
@@ -285,11 +285,11 @@
           <div class="list-group">
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
               </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
@@ -302,11 +302,11 @@
           <div class="list-group">
             <div class="list-group-item py-3">
               <div class="pb-2">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-half"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-fill text-altdark"></i>
+                <i class="bi bi-star-half text-altdark"></i>
               </div>
               <h5 class="mb-1">A must buy for every aspiring web dev</h5>
               <p class="mb-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos modi rem placeat eligendi laborum culpa. Exercitationem, voluptatibus. Ab reiciendis, modi harum architecto esse soluta ea nesciunt incidunt, quas odio magni!</p>
